test/2-error/bare-semicolon.test
{
  'compile-err': '''\
parse error: test/2-error/bare-semicolon.ploy:1:1: unexpected terminator character: ';'
  ;
  ^
''',
  'compile-code': 1
}
